--- a/SeCon/res/plugin.yml
+++ b/SeCon/res/plugin.yml
@@ -5,6 +5,7 @@ author: Sehales
 website: http://sehales.net
 #yes I know that SeCon itself isn't using ProtocolLib and Factions....
 softdepend: [Vault,VanishNoPacket,Towny,Factions,TagAPI,ProtocolLib]
+loadBefore: [mcore]
 commands:
   secon:
     aliases: [sc]
