--- a/SeCon/pom.xml
+++ b/SeCon/pom.xml
@@ -7,6 +7,7 @@
 
   <properties>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	<powermock.version>1.5.4</powermock.version>
   </properties>
 
   <repositories>
@@ -62,6 +63,24 @@
   	  <scope>system</scope>
   	  <systemPath>${basedir}/lib/Towny.jar</systemPath>
   	</dependency>
+  	<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
